--- a/styles/style.css
+++ b/styles/style.css
@@ -688,6 +688,11 @@ h1, h2, h3, p {
     background: -o-linear-gradient(23.13deg, #1A2A41 3.98%, #193761 100.83%);
     background: linear-gradient(66.87deg, #1A2A41 3.98%, #193761 100.83%);
     border-radius: 24px;
+    display: block;
+}
+
+.game-block-mini:hover {
+    text-decoration: none;
 }
 
 .game-block-mini--heading .game-block-mini--heading-h3 {
